[project]
name = "blog-generation-agent"
version = "0.1.0"
description = "AI-powered blog generation pipeline using LangGraph, Groq LLM, and Tavily web research"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "h11<0.16",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.2",
    "langgraph-cli[inmem]>=0.4.26",
    "markdown>=3.10.2",
    "pydantic>=2.13.4",
    "tavily-python>=0.7.24",
    "uvicorn>=0.48.0",
    "watchdog>=6.0.0",
]
